Fix for #14: Add CSS line wrapping to <pre> elements in default CSS
Thanks @calebjones

--- a/doclets/src/main/resources/doclet.css
+++ b/doclets/src/main/resources/doclet.css
@@ -90,6 +90,14 @@ table.examples td {
  vertical-align: top;
 }
 
+table.examples pre {
+ white-space: pre-wrap;       /* css-3 */
+ white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+ white-space: -pre-wrap;      /* Opera 4-6 */
+ white-space: -o-pre-wrap;    /* Opera 7 */
+ word-wrap: break-word;       /* Internet Explorer 5.5+ */
+}
+
 .footer {
  font-style: italic;
  font-size: smaller;
